refactor: switch to control flow syntax

--- a/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.html
+++ b/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.html
@@ -1,17 +1,12 @@
 <div [style.height]="ghostBodyHeight + 'px'" class="ghost-loader ghost-cell-container">
-  <div
-    [style.height]="rowHeight + 'px'"
-    class="ghost-element"
-    *ngFor="let item of [].constructor(pageSize)"
-  >
-    <ng-container *ngFor="let col of columns">
-      <div
-        class="line ghost-cell-strip"
-        *ngIf="!col.ghostCellTemplate; else ghostCellTemplate"
-        [style.width]="col?.width + 'px'"
-      >
-      </div>
-      <ng-template #ghostCellTemplate [ngTemplateOutlet]="col.ghostCellTemplate"> </ng-template>
-    </ng-container>
-  </div>
+  @for (item of [].constructor(pageSize); track item) {
+    <div [style.height]="rowHeight + 'px'" class="ghost-element">
+      @for (col of columns; track col) {
+        @if (!col.ghostCellTemplate) {
+          <div class="line ghost-cell-strip" [style.width]="col?.width + 'px'"> </div>
+        } @else {}
+        <ng-template #ghostCellTemplate [ngTemplateOutlet]="col.ghostCellTemplate"> </ng-template>
+      }
+    </div>
+  }
 </div>
