--- a/projects/ngx-datatable/src/lib/components/datatable.component.html
+++ b/projects/ngx-datatable/src/lib/components/datatable.component.html
@@ -1,33 +1,34 @@
 <div visibilityObserver (visible)="recalculate()">
   <div role="table">
-    <datatable-header
-      role="rowgroup"
-      *ngIf="headerHeight"
-      [sorts]="sorts"
-      [sortType]="sortType"
-      [scrollbarH]="scrollbarH"
-      [innerWidth]="_innerWidth"
-      [offsetX]="_offsetX | async"
-      [dealsWithGroup]="groupedRows !== undefined"
-      [columns]="_internalColumns"
-      [headerHeight]="headerHeight"
-      [reorderable]="reorderable"
-      [targetMarkerTemplate]="targetMarkerTemplate"
-      [sortAscendingIcon]="cssClasses.sortAscending"
-      [sortDescendingIcon]="cssClasses.sortDescending"
-      [sortUnsetIcon]="cssClasses.sortUnset"
-      [allRowsSelected]="allRowsSelected"
-      [selectionType]="selectionType"
-      [verticalScrollVisible]="verticalScrollVisible"
-      [enableClearingSortState]="enableClearingSortState"
-      (sort)="onColumnSort($event)"
-      (resize)="onColumnResize($event)"
-      (resizing)="onColumnResizing($event)"
-      (reorder)="onColumnReorder($event)"
-      (select)="onHeaderSelect()"
-      (columnContextmenu)="onColumnContextmenu($event)"
-    >
-    </datatable-header>
+    @if (headerHeight) {
+      <datatable-header
+        role="rowgroup"
+        [sorts]="sorts"
+        [sortType]="sortType"
+        [scrollbarH]="scrollbarH"
+        [innerWidth]="_innerWidth"
+        [offsetX]="_offsetX | async"
+        [dealsWithGroup]="groupedRows !== undefined"
+        [columns]="_internalColumns"
+        [headerHeight]="headerHeight"
+        [reorderable]="reorderable"
+        [targetMarkerTemplate]="targetMarkerTemplate"
+        [sortAscendingIcon]="cssClasses.sortAscending"
+        [sortDescendingIcon]="cssClasses.sortDescending"
+        [sortUnsetIcon]="cssClasses.sortUnset"
+        [allRowsSelected]="allRowsSelected"
+        [selectionType]="selectionType"
+        [verticalScrollVisible]="verticalScrollVisible"
+        [enableClearingSortState]="enableClearingSortState"
+        (sort)="onColumnSort($event)"
+        (resize)="onColumnResize($event)"
+        (resizing)="onColumnResizing($event)"
+        (reorder)="onColumnReorder($event)"
+        (select)="onHeaderSelect()"
+        (columnContextmenu)="onColumnContextmenu($event)"
+      >
+      </datatable-header>
+    }
     <datatable-body
       tabindex="0"
       role="rowgroup"
@@ -78,21 +79,22 @@
       <ng-content select="[empty-content]" ngProjectAs="[empty-content]"></ng-content>
     </datatable-body>
   </div>
-  <datatable-footer
-    *ngIf="footerHeight"
-    [rowCount]="groupedRows !== undefined ? _internalRows.length : rowCount"
-    [pageSize]="pageSize"
-    [offset]="offset"
-    [footerHeight]="footerHeight"
-    [footerTemplate]="footer"
-    [totalMessage]="messages.totalMessage"
-    [pagerLeftArrowIcon]="cssClasses.pagerLeftArrow"
-    [pagerRightArrowIcon]="cssClasses.pagerRightArrow"
-    [pagerPreviousIcon]="cssClasses.pagerPrevious"
-    [selectedCount]="selected.length"
-    [selectedMessage]="!!selectionType && messages.selectedMessage"
-    [pagerNextIcon]="cssClasses.pagerNext"
-    (page)="onFooterPage($event)"
-  >
-  </datatable-footer>
+  @if (footerHeight) {
+    <datatable-footer
+      [rowCount]="groupedRows !== undefined ? _internalRows.length : rowCount"
+      [pageSize]="pageSize"
+      [offset]="offset"
+      [footerHeight]="footerHeight"
+      [footerTemplate]="footer"
+      [totalMessage]="messages.totalMessage"
+      [pagerLeftArrowIcon]="cssClasses.pagerLeftArrow"
+      [pagerRightArrowIcon]="cssClasses.pagerRightArrow"
+      [pagerPreviousIcon]="cssClasses.pagerPrevious"
+      [selectedCount]="selected.length"
+      [selectedMessage]="!!selectionType && messages.selectedMessage"
+      [pagerNextIcon]="cssClasses.pagerNext"
+      (page)="onFooterPage($event)"
+    >
+    </datatable-footer>
+  }
 </div>
