refactor: move ghost cell template to else block

--- a/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.html
+++ b/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.html
@@ -4,8 +4,9 @@
       @for (col of columns; track col) {
         @if (!col.ghostCellTemplate) {
           <div class="line ghost-cell-strip" [style.width]="col?.width + 'px'"> </div>
-        } @else {}
-        <ng-template #ghostCellTemplate [ngTemplateOutlet]="col.ghostCellTemplate"> </ng-template>
+        } @else {
+          <ng-template [ngTemplateOutlet]="col.ghostCellTemplate"> </ng-template>
+        }
       }
     </div>
   }
