refactor: use css sticky instead of transform

--- a/projects/ngx-datatable/src/lib/components/datatable.component.scss
+++ b/projects/ngx-datatable/src/lib/components/datatable.component.scss
@@ -117,14 +117,23 @@
   }
 
   .datatable-row-left,
-  .datatable-row-right {
+  .datatable-row-right,
+  .datatable-group-header {
     z-index: 9;
+    position: sticky !important;
   }
 
   .datatable-row-left,
-  .datatable-row-center,
-  .datatable-row-group,
+  .datatable-group-header {
+    left: 0;
+  }
+
   .datatable-row-right {
+    right: 0;
+  }
+
+  .datatable-row-center,
+  .datatable-row-group {
     position: relative;
   }
 
