test: add e2e for paging, sorting, selection and update images

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -116,7 +116,8 @@ h3 small {
   width: 100%;
 }
 
-.selection-cell .datatable-body-cell.active {
+.selection-cell .datatable-body-cell.active,
+.selection-row .datatable-body-row.active .datatable-body-cell {
   background: #0829e0 !important;
   color: #fff !important;
 }
