refactor: move fixed-header styles to component level (#203)

--- a/projects/ngx-datatable/src/lib/components/header/header-cell.component.scss
+++ b/projects/ngx-datatable/src/lib/components/header/header-cell.component.scss
@@ -2,6 +2,12 @@
   position: relative;
   display: inline-block;
 
+  :host-context(ngx-datatable.fixed-header) & {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &.sortable {
     .datatable-header-cell-wrapper {
       cursor: pointer;
