--- a/projects/ngx-datatable/src/lib/components/header/header.component.scss
+++ b/projects/ngx-datatable/src/lib/components/header/header.component.scss
@@ -6,4 +6,8 @@
 .datatable-header-inner {
   align-items: stretch;
   -webkit-align-items: stretch;
+
+  :host-context(ngx-datatable.fixed-header) & {
+    white-space: nowrap;
+  }
 }
