refactor: move fixed-row styles to respective components (#218)

--- a/projects/ngx-datatable/src/lib/components/body/body-row.component.scss
+++ b/projects/ngx-datatable/src/lib/components/body/body-row.component.scss
@@ -1,6 +1,10 @@
 :host {
   outline: none;
 
+  :host-context(ngx-datatable.fixed-row) & {
+    white-space: nowrap;
+  }
+
   > div {
     display: flex;
   }
