--- a/projects/ngx-datatable/src/lib/components/header/header.component.scss
+++ b/projects/ngx-datatable/src/lib/components/header/header.component.scss
@@ -1,3 +1,5 @@
+@use '../shared';
+
 :host {
   display: block;
   overflow: hidden;
@@ -11,3 +13,5 @@
     white-space: nowrap;
   }
 }
+
+@include shared.pinned-columns();
