--- a/projects/ngx-datatable/src/lib/components/body/body-row.component.scss
+++ b/projects/ngx-datatable/src/lib/components/body/body-row.component.scss
@@ -1,15 +1,17 @@
 @use '../shared';
 
 :host {
+  display: flex;
   outline: none;
 
   :host-context(ngx-datatable.fixed-row) & {
     white-space: nowrap;
   }
+}
 
-  > div {
-    display: flex;
-  }
+.datatable-row-group {
+  display: flex;
+  position: relative;
 }
 
 @include shared.pinned-columns();
