--- a/projects/ngx-datatable/src/lib/components/header/header.component.scss
+++ b/projects/ngx-datatable/src/lib/components/header/header.component.scss
@@ -6,8 +6,7 @@
 }
 
 .datatable-header-inner {
-  align-items: stretch;
-  -webkit-align-items: stretch;
+  display: flex;
 
   :host-context(ngx-datatable.fixed-header) & {
     white-space: nowrap;
