feat: add touch support for reorderable and resizable features (#181)
* feat: port touch events to newest version

* test(draggable): use MouseEvent constructor to simulate dragging

* style(draggable): run prettier

--- a/projects/ngx-datatable/src/lib/components/header/header-cell.component.scss
+++ b/projects/ngx-datatable/src/lib/components/header/header-cell.component.scss
@@ -49,6 +49,19 @@
     visibility: visible;
   }
 }
+:host {
+  @media (hover: none) {
+    touch-action: none;
+
+    .resize-handle {
+      visibility: visible;
+    }
+
+    .datatable-header-cell-label.draggable {
+      user-select: none;
+    }
+  }
+}
 
 .resize-handle--not-resizable {
   :host(:hover) {
