refactor: move cell styles into respective components (#254)

--- a/projects/ngx-datatable/src/lib/components/body/body-cell.component.scss
+++ b/projects/ngx-datatable/src/lib/components/body/body-cell.component.scss
@@ -1,3 +1,9 @@
+@use '../shared';
+
+:host {
+  @include shared.cell-styles();
+}
+
 :host-context(ngx-datatable.fixed-row) :host {
   overflow: hidden;
   white-space: nowrap;
