--- a/projects/ngx-datatable/src/lib/components/shared.scss
+++ b/projects/ngx-datatable/src/lib/components/shared.scss
@@ -13,3 +13,14 @@
     right: 0;
   }
 }
+
+@mixin cell-styles() {
+  overflow-x: hidden;
+  vertical-align: top;
+  display: inline-block;
+  line-height: 1.625;
+
+  &:focus {
+    outline: none;
+  }
+}
