refactor: move scroll-vertical style to the body component (#258)

--- a/projects/ngx-datatable/src/lib/components/body/body.component.scss
+++ b/projects/ngx-datatable/src/lib/components/body/body.component.scss
@@ -18,6 +18,10 @@ datatable-scroller {
   }
 }
 
+:host-context(ngx-datatable.scroll-vertical) :host {
+  overflow-y: auto;
+}
+
 [hidden] {
   display: none !important;
 }
