refactor: remove general `box-sizing: border-box` (#256)
BREAKING CHANGE: Previously the datatable
applied `box-sizing: border-box` to all its elements.
This is no longer the case.

Custom themes that depend on this must set this behavior manually, using:

 ```css
   *,
   *:before,
   *:after {
     box-sizing: border-box;
   }
 ```

--- a/projects/ngx-datatable/src/lib/themes/dark.scss
+++ b/projects/ngx-datatable/src/lib/themes/dark.scss
@@ -5,6 +5,12 @@
   color: #fff;
   font-size: 13px;
 
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
+  }
+
   .datatable-header {
     background: #181b24;
     color: #72809b;
