build: enable stylint rules and fix violations

--- a/projects/ngx-datatable/src/lib/components/body/body.component.scss
+++ b/projects/ngx-datatable/src/lib/components/body/body.component.scss
@@ -23,5 +23,5 @@ datatable-scroller {
 }
 
 [hidden] {
-  display: none !important;
+  display: none !important; // stylelint-disable-line declaration-no-important
 }
