--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 $datatable-pager-color: rgba(0, 0, 0, 0.64);
 
-@import '../../projects/ngx-datatable/src/lib/themes/material.scss';
-@import '../../projects/ngx-datatable/src/lib/themes/dark.scss';
-@import '../../projects/ngx-datatable/src/lib/themes/bootstrap.scss';
+@import '../../projects/ngx-datatable/src/lib/themes/material';
+@import '../../projects/ngx-datatable/src/lib/themes/dark';
+@import '../../projects/ngx-datatable/src/lib/themes/bootstrap';
