--- a/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.scss
+++ b/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.scss
@@ -3,8 +3,9 @@
  */
 @keyframes ghost {
   from {
-    background-position: 0vw 0;
+    background-position: 0 0;
   }
+
   to {
     background-position: 100vw 0;
   }
@@ -14,8 +15,8 @@
   overflow: hidden;
 
   .line {
-    width: 100%;
-    height: 12px;
+    inline-size: 100%;
+    block-size: 12px;
     animation-name: ghost;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
@@ -29,7 +30,7 @@
 
 :host.ghost-overlay {
   position: sticky;
-  top: 20px;
+  inset-block-start: 20px;
 
   .ghost-cell {
     padding-inline: 1.2rem;
