--- a/projects/ngx-datatable/src/lib/components/footer/footer.component.scss
+++ b/projects/ngx-datatable/src/lib/components/footer/footer.component.scss
@@ -1,13 +1,13 @@
 :host {
   display: block;
-  width: 100%;
+  inline-size: 100%;
   overflow: auto;
 }
 
 .datatable-footer-inner {
   display: flex;
   align-items: center;
-  width: 100%;
+  inline-size: 100%;
 }
 
 .page-count {
