refactor: enable prefer-self-closing-tags

--- a/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.html
+++ b/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.html
@@ -6,7 +6,7 @@
           @if (!col.ghostCellTemplate) {
             <div class="line ghost-cell-strip"></div>
           } @else {
-            <ng-template [ngTemplateOutlet]="col.ghostCellTemplate"></ng-template>
+            <ng-template [ngTemplateOutlet]="col.ghostCellTemplate" />
           }
         </div>
       }
