--- a/projects/ngx-datatable/src/lib/components/datatable.component.html
+++ b/projects/ngx-datatable/src/lib/components/datatable.component.html
@@ -27,8 +27,7 @@
         (reorder)="onColumnReorder($event)"
         (select)="onHeaderSelect()"
         (columnContextmenu)="onColumnContextmenu($event)"
-      >
-      </datatable-header>
+      />
     }
     <datatable-body
       tabindex="0"
@@ -80,7 +79,7 @@
       (treeAction)="onTreeAction($event)"
     >
       <ng-content select="[loading-indicator]" ngProjectAs="[loading-indicator]">
-        <datatable-progress></datatable-progress>
+        <datatable-progress />
       </ng-content>
       <ng-content select="[empty-content]" ngProjectAs="[empty-content]">
         <div role="row">
@@ -108,7 +107,6 @@
       [selectedMessage]="!!selectionType && (messages.selectedMessage ?? 'selected')"
       [pagerNextIcon]="cssClasses.pagerNext"
       (page)="onFooterPage($event)"
-    >
-    </datatable-footer>
+    />
   }
 </div>
