--- a/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.html
+++ b/projects/ngx-datatable/src/lib/components/body/ghost-loader/ghost-loader.component.html
@@ -1,5 +1,5 @@
 <div class="ghost-loader ghost-cell-container" [style.height.px]="ghostBodyHeight">
-  @for (item of [].constructor(pageSize); track item) {
+  @for (item of [].constructor(pageSize); track $index) {
     <div class="ghost-element" [style.height.px]="rowHeight" [class.datatable-body-row]="cellMode">
       @for (col of columns; track col) {
         <div class="ghost-cell" [class.datatable-body-cell]="cellMode" [style.width.px]="col.width">
